WIK-DPS-TP04/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-nginx-pod
spec:
  containers:
    - name: tp04
      image: registry.cluster.wik.cloud/public/echo
      ports:
        - containerPort: 80
