WIK-DPS-TP04/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test5

spec:
  rules:
    - host: domaine.wik.tp04
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: test4
                port:
                  number: 8080
