WIK-DPS-TP04/replica-set.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress
spec:
  rules:
    - host: domaine.wik.tp04
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: replica-service
                port:
                  number: 80
